# kernex-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MANIFESTO.md  README.md  ROADMAP.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: binary-size-build.yml  binary-size-comment.yml  ci.yml  release.yml  size-gate.yml
builtins/accessibility-auditor/: SKILL.md
builtins/agents-orchestrator/: SKILL.md
builtins/ai-engineer/: SKILL.md
builtins/api-tester/: SKILL.md
builtins/backend-architect/: SKILL.md
builtins/devops-automator/: SKILL.md
builtins/frontend-developer/: SKILL.md
builtins/performance-benchmarker/: SKILL.md
builtins/project-manager/: SKILL.md
builtins/reality-checker/: SKILL.md
builtins/security-engineer/: SKILL.md
builtins/senior-developer/: SKILL.md
builtins/skill-factory/: SKILL.md
deploy/: .env.example  Caddyfile  Dockerfile  Dockerfile.caddy  PLAN.md  SETUP.md  docker-compose.local.yml  docker-compose.traefik.yml  docker-compose.vps.yml  docker-compose.yml  entrypoint.sh
deploy/skills/: validate_skill.py
deploy/skills/agents-orchestrator/: SKILL.md
deploy/skills/api-tester/: SKILL.md
deploy/skills/backend-architect/: SKILL.md
deploy/skills/devops-automator/: SKILL.md
deploy/skills/geo-auditor/: SKILL.md
deploy/skills/geo-schema-generator/: SKILL.md
deploy/skills/interface-auditor/: SKILL.md
deploy/skills/reality-checker/: SKILL.md
deploy/skills/references/: autonomy-guide.md  description-patterns.md  skills-playbook.md  templates.md
deploy/skills/reviewers/developer-dx-reviewer/: SKILL.md
deploy/skills/reviewers/enterprise-buyer-reviewer/: SKILL.md
deploy/skills/reviewers/non-technical-stakeholder/: SKILL.md
deploy/skills/reviewers/security-skeptic-reviewer/: SKILL.md
deploy/skills/security-engineer/: SKILL.md
deploy/skills/senior-developer/: SKILL.md
deploy/skills/uxui-evaluator/: SKILL.md
deploy/skills/workflow-runner/: SKILL.md
deploy/workflows/: feature-design.toml  geo-audit.toml  pr-review.toml  security-audit.toml
docs/: PLAN.md  agent-bloat-2026-05-10-crates.txt  agent-bloat-2026-05-10-functions.txt  agent-bloat-baseline-2026-05-10-crates.txt  agent-bloat-baseline-2026-05-10-functions.txt  agent-bloat-baseline-2026-05-11-crates.txt  agent-bloat-baseline-2026-05-11-functions.txt  agent-dep-tree-baseline-2026-05-10.txt  agent-dep-tree-minimal-2026-05-10.txt  agent-size-2026-05-10.txt  agent-size-baseline-2026-05-10.txt
docs/adapters/: codex.md
evals/: evals.json
examples/: .kx.toml.example
openspec/: config.yaml
openspec/archive/2026-05-cargo-feature-graph/: proposal.md  tasks.md
openspec/archive/2026-05-kx-mem-cli-promotion/: design.md  proposal.md  tasks.md
openspec/changes/binary-size-pr-comment/: proposal.md  tasks.md
openspec/changes/cargo-feature-graph/: proposal.md  tasks.md
openspec/changes/kx-mem-cli-promotion/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/phase-e-claude-adapter/: design.md  proposal.md  spec.md  tasks.md
scripts/: check-provider-table.sh  check-size.sh  diff-bloat.py
src/: builtins.rs  cli.rs  commands.rs  config.rs  lib.rs  loader.rs  main.rs  prompts.rs  runtime_glue.rs  scheduler.rs  stack.rs  utils.rs
src/adapters/: claude.rs  codex.rs  mod.rs  shared.rs
src/configurator/: mcp_registrar.rs  mod.rs  stage_apply.rs  stage_backup.rs  stage_detect.rs  stage_report.rs  stage_resolve.rs  stage_review.rs  stage_verify.rs
src/install/: audit.rs  cli.rs  mod.rs  preset.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/mem/: cli.rs  errors.rs  mod.rs  render.rs  types.rs
src/serve/: db.rs  jobs.rs  mod.rs  routes.rs  skills.rs  workflow.rs
src/skills/: audit.rs  cli_handler.rs  manifest.rs  mod.rs  parser.rs  permissions.rs  prompt.rs  types.rs
src/tui/: mod.rs
templates/claude/: CLAUDE.md.tmpl  mcp.json.tmpl  output-style.md.tmpl
templates/codex/: AGENTS.md.tmpl  config.toml.tmpl  output-style.md.tmpl
tests/: adapter_claude.rs  configurator_e2e.rs  configurator_smoke.rs  install_audit.rs  install_dispatcher.rs  mem_repl_parity.rs  phase_f_codex.rs  skills_ref_pinning.rs  stage_apply.rs  stage_backup.rs  stage_detect.rs  stage_resolve.rs  stage_verify.rs
tests/common/: mod.rs
