[package]
name = "kernex-agent"
version = "0.5.0"
edition = "2021"
rust-version = "1.74"
description = "CLI dev assistant powered by Kernex runtime"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kernex-dev/kernex-agent"
homepage = "https://kernex.dev"
documentation = "https://docs.rs/kernex-agent"
keywords = ["ai", "agent", "cli", "assistant", "coding"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "kx"
path = "src/main.rs"

[dependencies]
kernex-runtime = "0.8.0"
kernex-core = "0.8.0"
kernex-providers = "0.8.0"
kernex-pipelines = "0.8.0"
kernex-sandbox = "0.8.0"
kernex-memory = "0.8.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "rt", "net", "signal"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dirs = "6"
rustyline = "15"
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
basic-toml = "0.1"
sha2 = "0.10"
ureq = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
# Used by `mem::cli` to parse `--since` strings (e.g. `30d`) and to
# project `SystemTime` back to the SQLite TIMESTAMP shape for JSON
# output. kernex-memory's own `chrono` dep is the same workspace pin.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Optional deps. Each is pulled in only when its owning feature is
# enabled. Keeping them optional lets `--no-default-features --features
# memory-cli` ship a slim `kx` for users who only need the local memory
# CLI surface.
axum = { version = "0.8", features = ["json"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
hmac = { version = "0.12", optional = true }
subtle = { version = "2", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# Re-introduced 2026-05-11 (closes FU-B-04). The serve module now uses
# `tower_http::trace::TraceLayer` to emit a structured span per HTTP
# request; the dep stays optional under the `serve` feature so it never
# reaches the minimal variant.
tower-http = { version = "0.5", features = ["trace"], optional = true }

# Placeholder optional deps. Reserved for the corresponding feature
# flag's eventual implementation; currently no source under default
# activates them.
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
toml_edit = { version = "0.22", optional = true }

[features]
# Default build: Claude-first UX, the `kx mem *` cfg surface, and the
# headless HTTP daemon. Matches the pre-change `cargo install kernex-agent`
# behaviour byte-for-byte.
default = ["agent-claude", "memory-cli", "serve"]

# Core features.
memory-cli = []                                                                # reserves cfg surface for `kx mem *` subcommands
serve = ["dep:axum", "dep:hmac", "dep:subtle", "dep:uuid", "dep:rusqlite", "dep:tower-http"]  # `kx serve` headless HTTP daemon
tui = ["dep:ratatui", "dep:crossterm"]                                         # placeholder; no source yet

# Configurator adapters. Each is opt-in. Claude logic remains
# unconditional in this change; the cfg surface is reserved so the
# adapter module can move behind the flag without another Cargo edit.
agent-claude   = []                       # reserved cfg surface, no extra deps
agent-codex    = ["dep:toml_edit"]        # toml_edit is no longer pulled transitively (kernex-agent migrated `toml` -> `basic-toml` in FU-A-06); enabling `agent-codex` adds ~272 KiB
agent-opencode = []                       # placeholder; serde_json is already unconditional
agent-cursor   = []                       # placeholder; rules file is plain text
agent-cline    = []                       # placeholder; serde_json is already unconditional
agent-windsurf = ["agent-cursor"]         # placeholder; shares the Cursor adapter

# Convenience meta-features for grouped installs.
agent-shell-cli = ["agent-claude", "agent-codex", "agent-opencode"]
agent-ide       = ["agent-cursor", "agent-cline", "agent-windsurf"]
agent-all       = ["agent-shell-cli", "agent-ide"]

# Preset placeholders. Each will embed a small TOML blob when wired up.
preset-full-kernex        = []   # placeholder; do not implement here
preset-security-hardened  = []   # placeholder; do not implement here
preset-airgapped-defense  = []   # placeholder; do not implement here
preset-solo-dev           = []   # placeholder; do not implement here
preset-ci-only            = []   # placeholder; do not implement here
preset-all = [
    "preset-full-kernex",
    "preset-security-hardened",
    "preset-airgapped-defense",
    "preset-solo-dev",
    "preset-ci-only",
]

# Provider features. Forwarded to kernex-providers.
bedrock = ["kernex-providers/bedrock"]

# Optional deps that are reserved for placeholder features (`tui`,
# `agent-codex`) and direct deps reserved for future surfaces get listed
# here so cargo-machete does not flag them as unused while the
# implementations are still pending. `kernex-sandbox` is a direct dep
# but currently has no `use kernex_sandbox` reference in src/; it is
# pinned for upcoming sandbox-based agent execution surfaces.
# `kernex-memory` is pinned for the upcoming `kx mem *` subcommand
# surface; the trait import lands with the first subcommand commit.
[package.metadata.cargo-machete]
ignored = ["ratatui", "crossterm", "toml_edit", "kernex-sandbox", "kernex-memory"]

# Release profile mirrors the kernex-dev workspace's `lto = "fat"`
# discipline so the bin -> lib split introduced by FU-D-AG-06 does not
# regress the macOS aarch64 product commitment of 15 MiB per
# V2-EXECUTION-PLAN decision 1.3. Without `lto = "fat"`, cross-crate
# inlining between the `kx` binary and the `kernex-agent` library does
# not happen, and the binary grows by ~650 KiB (measured 2026-05-12
# during FU-D-AG-06 close-out). With `lto = "fat"` the binary returns
# to and improves on the pre-split baseline.
[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
# Filesystem tests use TempDir so each test gets a unique random path with
# RAII cleanup. Avoids races when tests run in parallel and the prior
# `temp_dir().join("__kx_xxx__")` pattern was reused across cases.
tempfile = "3"
# `tests/serve_routes.rs` exercises the Axum router via tower's
# `ServiceExt::oneshot` so we cover auth, body limits, and webhook
# fail-closed paths without spinning up a real listener or provider.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Used only by `mem::cli::tests::classify_*` to construct synthetic
# `sqlx::Error::PoolTimedOut` / `PoolClosed` instances feeding the
# transient classifier. Version pin matches kernex-memory's workspace
# sqlx pin (0.8) so the test artifact never drifts off the upstream
# error shape. Dev-only; production binary does not link sqlx directly.
sqlx = { version = "0.8", default-features = false }
